Updated search with a custom NotEqualQuery to avoid complex regex replaces for != query terms.  Updated search results to further test, based on this change

--- a/Slalom.ContentSearch.Linq.Azure/Slalom.ContentSearch.Linq.Azure.csproj
+++ b/Slalom.ContentSearch.Linq.Azure/Slalom.ContentSearch.Linq.Azure.csproj
@@ -78,6 +78,7 @@
     <Compile Include="ICompositeAnalyzer.cs" />
     <Compile Include="MatchNoDocsQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queries\NotEqualQuery.cs" />
     <Compile Include="Queries\SpalnLastQuery.cs" />
     <Compile Include="Queries\SpanFuzzyQuery.cs" />
     <Compile Include="Queries\SpanSubQuery.cs" />
