Added updated RegexQuery and updated logic to use it

--- a/Slalom.ContentSearch.Linq.Azure/Slalom.ContentSearch.Linq.Azure.csproj
+++ b/Slalom.ContentSearch.Linq.Azure/Slalom.ContentSearch.Linq.Azure.csproj
@@ -79,6 +79,7 @@
     <Compile Include="MatchNoDocsQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\NotEqualQuery.cs" />
+    <Compile Include="Queries\RegexQuery.cs" />
     <Compile Include="Queries\SpalnLastQuery.cs" />
     <Compile Include="Queries\SpanFuzzyQuery.cs" />
     <Compile Include="Queries\SpanSubQuery.cs" />
