Changed index create/updates to Async to improve performance and turned on batching for adding docs

--- a/Website/App_Config/Include/Slalom.ContentSearch/Slalom.ContentSearch.Azure.DefaultIndexConfiguration.config
+++ b/Website/App_Config/Include/Slalom.ContentSearch/Slalom.ContentSearch.Azure.DefaultIndexConfiguration.config
@@ -11,8 +11,8 @@
 
           <AzureSearchServiceName>{Service Name}</AzureSearchServiceName>
           <AzureSearchServiceApiKey>{Service API Key}</AzureSearchServiceApiKey>
-          <AzureSearchEnableBatching>False</AzureSearchEnableBatching>
-          <AzureSearchBatchSize>10</AzureSearchBatchSize>
+          <AzureSearchEnableBatching>True</AzureSearchEnableBatching>
+          <AzureSearchBatchSize>20</AzureSearchBatchSize>
           <AzureSearchRetryCount>3</AzureSearchRetryCount>
           <AzureSearchRetryInitialInterval>2</AzureSearchRetryInitialInterval>
           <AzureSearchRetryIncrement>2</AzureSearchRetryIncrement>
