--- a/Website/App_Config/Include/Slalom.ContentSearch/Slalom.ContentSearch.AzureMaster.config
+++ b/Website/App_Config/Include/Slalom.ContentSearch/Slalom.ContentSearch.AzureMaster.config
@@ -20,7 +20,7 @@
             <locations hint="list:AddCrawler">
               <crawler type="Slalom.ContentSearch.AzureItemCrawler, Slalom.ContentSearch">
                 <Database>master</Database>
-                <Root>/sitecore/media library</Root>
+                <Root>/sitecore</Root>
               </crawler>
             </locations>
             <enableItemLanguageFallback>false</enableItemLanguageFallback>
