--- a/Jarstan.ContentSearch.Linq.Azure/Jarstan.ContentSearch.Linq.Azure.csproj
+++ b/Jarstan.ContentSearch.Linq.Azure/Jarstan.ContentSearch.Linq.Azure.csproj
@@ -96,6 +96,10 @@
     <Compile Include="Range\RangeQueryProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Jarstan.ContentSearch.Linq\Jarstan.ContentSearch.Linq.csproj">
+      <Project>{4b1635dc-d146-4212-816b-087e87f961cd}</Project>
+      <Name>Jarstan.ContentSearch.Linq</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Jarstan.ContentSearch\Jarstan.ContentSearch.csproj">
       <Project>{aa50051d-ecab-4eef-8eac-2466f48410c5}</Project>
       <Name>Jarstan.ContentSearch</Name>
