--- a/Website/Website.csproj
+++ b/Website/Website.csproj
@@ -67,6 +67,10 @@
       <HintPath>..\libs\Sitecore.ContentSearch.Linq.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Sitecore.ContentSearch.Linq.Lucene, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\libs\Sitecore.ContentSearch.Linq.Lucene.dll</HintPath>
+    </Reference>
     <Reference Include="Sitecore.Kernel, Version=6.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\libs\Sitecore.Kernel.dll</HintPath>
@@ -143,6 +147,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Search.aspx.cs">
+      <DependentUpon>Search.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Search.aspx.designer.cs">
+      <DependentUpon>Search.aspx</DependentUpon>
+    </Compile>
     <Compile Include="SearchResults.aspx.cs">
       <DependentUpon>SearchResults.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -172,6 +183,7 @@
     <Content Include="Scripts\MicrosoftMvcAjax.debug.js" />
     <Content Include="Scripts\MicrosoftMvcValidation.js" />
     <Content Include="Scripts\MicrosoftMvcValidation.debug.js" />
+    <Content Include="Search.aspx" />
     <Content Include="SearchResults.aspx" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
@@ -180,7 +192,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Web.config" />
-    <Content Include="App_Config\Include\Jarstan.ContentSearch\Jarstan.ContentSearch.Azure.DefaultIndexConfiguration.config" />
+    <Content Include="App_Config\Include\Jarstan.ContentSearch\Jarstan.ContentSearch.Azure.DefaultIndexConfiguration.config">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="App_Config\Include\Jarstan.ContentSearch\Sitecore.ContentSearch.Lucene.Index.Master.Media.config" />
+    <Content Include="App_Config\Include\Jarstan.ContentSearch\Jarstan.ContentSearch.AzureMaster.Media.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Properties\PublishProfiles\Dev.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
