Added logic to make sure items are indexed.  Needs to be code reviewed

--- a/Website/App_Config/Include/Jarstan.ContentSearch/Jarstan.ContentSearch.Azure.Web.config
+++ b/Website/App_Config/Include/Jarstan.ContentSearch/Jarstan.ContentSearch.Azure.Web.config
@@ -3,7 +3,7 @@
     <contentSearch>
       <configuration>
         <indexes hint="list:AddIndex">
-          <index id="azure-sitecore-master-index" type="Jarstan.ContentSearch.AzureProvider.AzureIndex, Jarstan.ContentSearch.AzureProvider">
+          <index id="azure-sitecore-web-index" type="Jarstan.ContentSearch.AzureProvider.AzureIndex, Jarstan.ContentSearch.AzureProvider">
             <param desc="name">$(id)</param>
             <!-- This initializes index property store. Id has to be set to the index id -->
             <param desc="propertyStore" ref="contentSearch/indexConfigurations/databasePropertyStore" param1="$(id)" />
@@ -19,7 +19,7 @@
             </commitPolicyExecutor>
             <locations hint="list:AddCrawler">
               <crawler type="Jarstan.ContentSearch.AzureItemCrawler, Jarstan.ContentSearch">
-                <Database>master</Database>
+                <Database>web</Database>
                 <Root>/sitecore</Root>
               </crawler>
             </locations>
