Updated testing page/info

--- a/Website/App_Config/Include/Jarstan.ContentSearch/Sitecore.ContentSearch.Lucene.Index.Master.Media.config
+++ b/Website/App_Config/Include/Jarstan.ContentSearch/Sitecore.ContentSearch.Lucene.Index.Master.Media.config
@@ -3,7 +3,7 @@
     <contentSearch>
       <configuration type="Sitecore.ContentSearch.ContentSearchConfiguration, Sitecore.ContentSearch">
         <indexes hint="list:AddIndex">
-          <index id="sitecore_master_media_index" type="Sitecore.ContentSearch.LuceneProvider.LuceneIndex, Sitecore.ContentSearch.LuceneProvider">
+          <index id="sitecore_test_web_index" type="Sitecore.ContentSearch.LuceneProvider.LuceneIndex, Sitecore.ContentSearch.LuceneProvider">
             <param desc="name">$(id)</param>
             <param desc="folder">$(id)</param>
             <!-- This initializes index property store. Id has to be set to the index id -->
@@ -20,8 +20,8 @@
             </commitPolicyExecutor>
             <locations hint="list:AddCrawler">
               <crawler type="Sitecore.ContentSearch.SitecoreItemCrawler, Sitecore.ContentSearch">
-                <Database>master</Database>
-                <Root>/sitecore/media library</Root>
+                <Database>web</Database>
+                <Root>/sitecore</Root>
               </crawler>
             </locations>
             <enableItemLanguageFallback>false</enableItemLanguageFallback>
