Updated to better support indexing

--- a/Website/App_Config/Include/Jarstan.ContentSearch/Jarstan.ContentSearch.Azure.DefaultIndexConfiguration.config
+++ b/Website/App_Config/Include/Jarstan.ContentSearch/Jarstan.ContentSearch.Azure.DefaultIndexConfiguration.config
@@ -11,8 +11,10 @@
 
           <AzureSearchServiceName>{Service Name}</AzureSearchServiceName>
           <AzureSearchServiceApiKey>{Service API Key}</AzureSearchServiceApiKey>
-          <AzureSearchEnableBatching>True</AzureSearchEnableBatching>
+          <!-- TODO: Enabled Batch Support -->
+          <AzureSearchEnableBatching>False</AzureSearchEnableBatching>
           <AzureSearchBatchSize>20</AzureSearchBatchSize>
+          <!-- Enabled Batch Support-->
           <AzureSearchRetryCount>5</AzureSearchRetryCount>
           <AzureSearchRetryInitialInterval>5</AzureSearchRetryInitialInterval>
           <AzureSearchRetryIncrement>5</AzureSearchRetryIncrement>
