--- a/Website/Website.csproj
+++ b/Website/Website.csproj
@@ -146,6 +146,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComputedFields\RowIdTextField.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Search.aspx.cs">
       <DependentUpon>Search.aspx</DependentUpon>
@@ -199,6 +200,7 @@
     <Content Include="App_Config\Include\Jarstan.ContentSearch\Jarstan.ContentSearch.AzureMaster.Media.config">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="App_Config\Include\Jarstan.ContentSearch\Jarstan.Test.ComputedFields.config" />
     <None Include="Properties\PublishProfiles\Dev.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
