Added intial boosting support based on index configuration field settings.

--- a/Website/App_Config/Include/Jarstan.ContentSearch/Jarstan.ContentSearch.Azure.DefaultIndexConfiguration.config
+++ b/Website/App_Config/Include/Jarstan.ContentSearch/Jarstan.ContentSearch.Azure.DefaultIndexConfiguration.config
@@ -18,6 +18,7 @@
           <AzureSearchRetryCount>5</AzureSearchRetryCount>
           <AzureSearchRetryInitialInterval>5</AzureSearchRetryInitialInterval>
           <AzureSearchRetryIncrement>5</AzureSearchRetryIncrement>
+          <AzureDefaultScoringProfileName>DefaultScoringProfile</AzureDefaultScoringProfileName>
 
           <!-- DEFAULT FIELD MAPPING
                The field map allows you to have full control over the way your data is stored in the index. This affects the way data is queried, 
