--- a/Jarstan.ContentSearch.AzureProvider/packages.config
+++ b/Jarstan.ContentSearch.AzureProvider/packages.config
@@ -4,5 +4,6 @@
   <package id="Microsoft.Rest.ClientRuntime" version="1.8.1" targetFramework="net45" />
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="2.5.2" targetFramework="net45" />
   <package id="Microsoft.Spatial" version="6.13.0" targetFramework="net45" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
 </packages>
